--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
   },
+   "engineStrict": true,
   "author": "",
   "license": "ISC",
   "dependencies": {
