--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
   },
+   "engines" : { 
+    "npm" : ">=8.0.0 <15.0.0",
+    "node" : ">=16.0.0 <17.0.0"
+  },
    "engineStrict": true,
   "author": "",
   "license": "ISC",
